# Hilite

./: Cargo.toml  README.md
examples/: colorize.rs  manual_highlighting.rs
src/: lib.rs
src/languages/: bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  go.rs  haskell.rs  html.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  sql.rs  swift.rs  typescript.rs
