[package]
name = "synk"
version = "0.1.0"
edition = "2021"
authors = ["Pjdur"]
description = "A syntax highlighter with terminal support"
repository = "https://github.com/Pjdur/synk"
license = "MIT"
license-file = "LICENSE.txt"

[dependencies]
regex = "1.11.1"

[dependencies]
regex = "1.11.1"


[dependencies]
regex = "1.11.1"
